Temporary fix for icon position because hiding the scrollbar screw up.

--- a/stylish/about:newtab.css
+++ b/stylish/about:newtab.css
@@ -1,4 +1,4 @@
-@namespace url(http://www.w3.org/1999/xhtml);
+B1;3407;0c@namespace url(http://www.w3.org/1999/xhtml);
 @-moz-document url("about:newtab") {
 #newtab-scrollbox {
     background: #111111 !important;
@@ -99,11 +99,14 @@
     background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="14" width="14"><g style="fill:%23fff"><rect y="0" x="0" height="4" width="4" /><rect y="0" x="5" height="4" width="4" /><rect y="0" x="10" height="4" width="4" /><rect y="5" x="0" height="4" width="4" /><rect y="5" x="5" height="4" width="4" /><rect y="5" x="10" height="4" width="4" /><rect y="10" x="0" height="4" width="4" /><rect y="10" x="5" height="4" width="4" /><rect y="10" x="10" height="4" width="4" /></g></svg>') !important;   
     background-position: 1px 1px !important;
     background-repeat: no-repeat !important;
+    background-size: 14px 14px !important;
     width: 16px !important;
     height: 16px !important;
     position: absolute !important;
+    /* temporary fix due to scrollbar hiding, 
+       TODO: fix and change to 0 */
     top: 0 !important;
-    right: 0 !important;
+    right: 6px !important;
     border: none !important;
 }
 #newtab-toggle::-moz-focus-inner {
